# joat

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
arcana/: pyproject.toml
arcana/arcana/: __init__.py  lazy_array.py
toolshed/: pyproject.toml
toolshed/toolshed/: arguantic.py
toolshed/toolshed/fingerprint/: hashing.py
toolshed/toolshed/pretty/: print_batch.py
