[tool.poetry]
name = "arcana"
version = "0.0.1"
description = "Arcana offers a comprehensive range of types that might be used across multiple projects, like available model types."
authors = []
packages = [{ include = "arcana" }]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
numba = "^0.59.1"
numpy = "^1.26.4"
tensorstore = "^0.1.56"
datasets = "^2.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"